--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "npx standard",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "standard": "^17.1.2",
     "vite": "^5.4.8"
   }
 }
