--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,8 +15,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "outDir": "./dist",
-    "types": ["node"],
+    "types": ["node", "vitest/globals"],
     "emitDeclarationOnly": true 
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "src/test/setup.ts", "vitest.config.ts"]
 }
